fixed overflow

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -568,6 +568,10 @@ video {
   justify-content: center;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .overflow-clip {
   overflow: clip;
 }
@@ -633,50 +637,26 @@ video {
   padding-right: 1rem;
 }
 
-.pt-56 {
-  padding-top: 14rem;
-}
-
 .pl-12 {
   padding-left: 3rem;
 }
 
-.pl-9 {
-  padding-left: 2.25rem;
+.pt-56 {
+  padding-top: 14rem;
 }
 
 .pl-5 {
   padding-left: 1.25rem;
 }
 
-.text-9xl {
-  font-size: 8rem;
+.text-6xl {
+  font-size: 3.75rem;
   line-height: 1;
 }
 
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
 }
 
 .font-semibold {
